# pyrheadb

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: analysis_impact_of_stereochemistry.ipynb  analysis_lipids_class_reactions.ipynb  atom_transition_network.ipynb  create_and_apply_reaction_smarts.ipynb  download_rhea.ipynb  filter_compounds.ipynb  flux_consistency_analysis_cobra.ipynb  reaction_network.ipynb  visualize_reactions.ipynb
examples/cache/: reactions_results.tsv
src/: pyrheadb.py
src/pyrheadb/: AtomMapper.py  AtomTransitionNetwork.py  RInChI.py  Reaction.py  ReactionNetwork.py  ReactionPrediction.py  ReactionSmarts.py  ReactionSmartsConverter.py  RheaCobraModel.py  RheaDB.py  RheaSPARQL.py  StarSmilesAndReactantSmilesToReaction.py  Visualization.py  cli.py
src/pyrheadb/biochemical_assumptions/: default_metabolic_precursor_molecules_with_manual_check.tsv  note on inorganics in biochemistry.txt  rhea_chebi_hub.tsv
src/pyrheadb/modeling_assumptions/: objective_functions
src/rheadb/: Reaction.py  ReactionNetwork.py  ReactionSmarts.py  RheaDB.py
tests/: test_atom_mapper.py  test_atom_transition_network.py  test_reaction.py  test_reaction_network.py  test_reaction_prediction.py  test_reaction_smarts_converter.py  test_rhea_db.py  test_rinchi.py
tests/test_rhea_db/rhea-versions/130/atom_mapping/: not_found_chebi_ids.tsv
tests/test_rhea_db/rhea-versions/130/atom_transition_network/: chebi_smiles_numbered.pkl
tests/test_rhea_db/rhea-versions/130/ctfiles/: README.txt
tests/test_rhea_db/rhea-versions/130/rxn/: 10001.rxn  10002.rxn  10005.rxn  10006.rxn  10009.rxn  10010.rxn  10013.rxn  10014.rxn  10017.rxn  10018.rxn  10021.rxn  10022.rxn  10025.rxn  10026.rxn  10029.rxn  10030.rxn  10033.rxn  10034.rxn  10037.rxn  10038.rxn  10041.rxn  10042.rxn  10045.rxn  10046.rxn  10049.rxn  10050.rxn  10053.rxn  10054.rxn  10057.rxn  10058.rxn  10061.rxn  10062.rxn  10065.rxn  10066.rxn  10069.rxn  10070.rxn  10073.rxn  10074.rxn  10077.rxn  10078.rxn  (+32166 more)
tests/test_rhea_db/rhea-versions/130/tsv/: chebi_cmpname.tsv  rhea-chebi-smiles.tsv  rhea-directions.tsv  rhea-ec-iubmb.tsv  rhea-obsoletes.tsv  rhea-reaction-participant-names.tsv  rhea-relationships-master-id.tsv  rhea-relationships.tsv  rhea2ec.tsv
