[project]
name = "pyrheadb"
version = "0.0.12"
authors = [
  { name="Anastasia Sveshnikova", email="anastasia.sveshnikova@sib.swiss" },
]
description = "Package to facilitate cheminformatics access to RheaDB and its analysis with Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["setuptools", "pandas", "rdkit", "requests_ftp", "networkx", "tqdm", "matplotlib",
    "pathlib", "rxnmapper", "pillow", "cobra", "sparqlwrapper", "jupyterlab"]

[project.urls]
Homepage = "https://github.com/sib-swiss/pyrheadb"
Issues = "https://github.com/sib-swiss/pyrheadb/issues"


[build-system]
requires = [
    "setuptools>=61.0",
    "requests_ftp>=0.3.1",
    "rxnmapper>=0.3.0",
    "rdkit>=2023.9.1",
    "pandas>=2.0.0",
    "networkx>=3.0",
    "tqdm>=4.0.0",
    "matplotlib>=3.6.0",
    "pathlib>=1.0.1",
    "pillow>=10.0.0",
    "cobra>=0.29.0",
    "sparqlwrapper>=0.0.0",
    "jupyterlab>=4.2.0"]

build-backend = "setuptools.build_meta"
