[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrheadb"
version = "0.1.8"
description = "Package to facilitate cheminformatics access to RheaDB and its analysis with Python"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Anastasia Sveshnikova", email="anastasia.sveshnikova@sib.swiss" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
]

dependencies = [
  "pandas",
  "rdkit",
  "requests_ftp",
  "networkx",
  "tqdm",
  "matplotlib",
  "rxnmapper",
  "pillow",
  "cobra",
  "sparqlwrapper",
  "jupyterlab"
]

[project.optional-dependencies]
test = [
  "pytest>=7.1.3",
  "pytest-cov>=3.0.0",
  "mypy>=1.4.1",
]

[project.urls]
Homepage = "https://github.com/sib-swiss/pyrheadb"
Issues = "https://github.com/sib-swiss/pyrheadb/issues"

# Console script
[project.scripts]
pyrheadb = "pyrheadb.cli:main"

# Tell setuptools to look for packages in src/
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--color=yes",
  "--cov-report=term-missing",
]
